<resources>
    <string name="authority_fileprovider" translatable="false">com.infineon.airocbluetoothconnect.fileprovider</string>
    <string name="app_name">AIROC™ Bluetooth® Connect App</string>
    <string name="app_name_ascii">AIROCBluetoothConnectApp</string>
    <string name="loading">Loading</string>
    <string name="title_devices">Bluetooth® LE Devices</string>
    <string name="title_products">Cypress Bluetooth® LE Products</string>
    <string name="title_contact">Contact Us</string>
    <string name="title_about">About</string>
    <string name="bluetooth_pair_start">Pairing started…\nPlease wait…</string>
    <string name="bluetooth_pair">Paired</string>
    <string name="bluetooth_unpair">Not Paired</string>
    <string name="bluetooth_pair_unpair_failed">Pair/Unpair failed</string>
    <string name="bluetooth_try_bond_device_started_title">Pairing attempt</string>
    <string name="bluetooth_try_bond_device_started_message">Pairing if necessary…\nPlease wait…</string>
    <string-array name="nav_drawer_items">
        <item>Bluetooth® LE Devices</item>
        <item>Infineon</item>
        <item>About</item>
        <item>Settings</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_child_home">Home</string>
    <string name="navigation_drawer_child_ble">Products</string>
    <string name="navigation_drawer_child_mobile">App Website</string>
    <string name="navigation_drawer_child_contact">Contact Us</string>
    <string name="cab_delete">Delete</string>
    <string name="image_navigation_icon">Navigation icon</string>
    <string name="image_splash_logo">Splash logo</string>
    <string name="image_navigation_drawer_logo">navigation logo</string>
    <string name="image_hrm_measurement_heart">heart rate monitor heart icon</string>
    <string name="image_hrm_ee_icon">heart rate monitor energy icon</string>
    <string name="image_hrm_rr_icon">heart rate monitor rr icon</string>
    <string name="image_health_temp_measurement_heart">health temperature thermometer icon</string>
    <string name="image_battery_service_level">battery level icon</string>
    <string name="image_bluetooth_logo">bluetooth logo</string>
    <string name="image_transmission_background_circle_logo">transmission blue circle</string>
    <string name="image_transmission_foreground_circle_logo">transmission white circle</string>
    <string name="glucose_icon">glucose icon</string>
    <string name="capsense_button_item">CapSense button icon</string>
    <string name="image_actionbar_bg_color">background color</string>
    <string name="image_about_company_logo">Infineon logo</string>
    <string name="image_blood_pressure">Blood pressure image</string>
    <string name="image_sensor_hub_graph">Sensor hub graph image</string>
    <string name="image_sensor_hub_accelerometer">Sensor hub accelerometer image</string>
    <string name="image_sensor_hub_accelerometer_cube">Sensor hub accelerometer cube image</string>
    <string name="image_sensor_hub_temperature">Sensor hub temperature image</string>
    <string name="image_sensor_hub_battery">Sensor hub battery image</string>
    <string name="image_sensor_hub_pressure">Sensor hub pressure image</string>
    <string name="alert_message_exit">Do you want to exit the application?</string>
    <string name="alert_message_exit_ok">OK</string>
    <string name="alert_message_exit_cancel">Cancel</string>
    <string name="alert_message_connect">Connecting to the device</string>
    <string name="alert_message_log_read">Reading the log file, please wait…</string>
    <string name="alert_message_connect_title">Device Connection</string>
    <string name="alert_message_bluetooth_connect">The Bluetooth® LE device is connected</string>
    <string name="alert_message_bluetooth_disconnect">The Bluetooth® LE device is disconnected</string>
    <string name="alert_message_bluetooth_reconnect">Please turn Bluetooth® ON</string>
    <string name="alert_message_reconnect">Your connection has been lost.</string>
    <string name="alert_message_wait">Please wait…</string>
    <string name="alert_message_no_internet">No internet connection</string>
    <string name="alert_message_unkown">Do you want to go to GATT DB?</string>
    <string name="alert_message_yes">Yes</string>
    <string name="alert_message_no">No</string>
    <string name="alert_message_retry">Retry</string>
    <string name="alert_message_unknown_title">No custom UI available</string>
    <string name="alert_message_bonding_title">Bonding</string>
    <string name="alert_message_bonding_message">Bonding is in process \nPlease wait…</string>
    <string name="alert_message_prepare_title">Preparing Notifications</string>
    <string name="alert_message_prepare_message">Enabling all available notifications</string>
    <string name="alert_csc_weight">Please enter a valid weight</string>
    <string name="alert_title_clear_cache">Clear Bluetooth® cache?</string>
    <string name="alert_message_clear_cache">Will clear all cache information of the connected device. The connection will be lost. Do you want to continue?</string>
    <string name="alert_message_delete_log">Do you want to delete this log?</string>
    <string name="alert_message_ota_cancel">Do you want to cancel the OTA update?</string>
    <string name="alert_message_ota_resume">Do you want to resume the OTA update?</string>
    <string name="alert_message_ota_pending">You have the firmware upgrade in progress. Going back will stop the firmware upgrade and disconnect the device. Do you want to continue?</string>
    <string name="alert_message_ota_user_warning">While firmware upgrade is in progress, don\'t press back button or home button. Please stay on the page till the upgrade is complete.</string>
    <string name="alert_programming_of_active_app_is_not_allowed">Programming of active application is not allowed</string>
    <string name="alert_invalid_active_app_programmed">Illegal active application selected.\nPlease change selection and try again.</string>
    <string name="alert_message_write_error">Error occurred in writing data.</string>
    <string name="alert_message_ota_error">Firmware update canceled\nError: </string>
    <string name="alert_message_silicon_id_mismatch_error">Error: The Silicon ID or Silicon Rev does not match</string>
    <string name="alert_message_no_silicon_id_error">Error: Target returned no Silicon ID</string>
    <string name="alert_message_checksum_error">Error: The checksum does not match</string>
    <string name="alert_message_verify_application_error">Error: Verification failed for the programmed application</string>
    <string name="alert_message_row_out_of_bounds_error">Error: The row number exceeds the bounds</string>
    <string name="alert_message_write_error_code">Error code:</string>
    <string name="alert_message_try_again">Please try again.</string>
    <string name="alert_message_hid_warning">HID service related access may be restricted by the OS. Accessing the associated characteristics and descriptor may cause the app to crash.</string>
    <string name="alert_message_file_copy">A cyacd file with the same name exists in AIROC™ Bluetooth® Connect App folder. Do you want to replace the existing cyacd file?</string>
    <string name="alert_message_service_undiscovered">No services found</string>
    <string name="alert_message_pair_on_connect_timed_out">Pairing attempt timed out</string>
    <string name="alert_message_pair_on_connect_failed">Pairing attempt failed</string>
    <string name="alert_message_pair_on_connect_failed_due_to_already_paired">Pairing attempt failed due to device already paired</string>
    <string name="alert_message_location_permission_required_title">Location permission required</string>
    <string name="alert_message_location_permission_required_message">Starting from Android 6.0 Marshmallow, the system requires location access in order to scan Bluetooth® LE Devices devices. \n\nBluetooth beacons iBeacons or Eddystone or similar may be used to determine the user\'s location. \n\nThe AIROC™ Bluetooth® Connect App uses the location information only for scanning Bluetooth® LE Devices devices when the application is opened and never uses when the application is sent to the background or when the application is closed.</string>
    <string name="alert_message_storage_permission_required_title">Storage permission required</string>
    <string name="alert_message_storage_permission_required_message">Starting from Android 6.0 Marshmallow the system requires storage permission to read/write files on the storage.</string>
    <string name="alert_message_bluetooth_permission_required_title">Bluetooth permission required</string>
    <string name="alert_message_bluetooth_permission_required_message">Starting from Android 12 Bluetooth scan and connect permissions are required in order to scan and connect to Bluetooth® Low Energy devices.</string>
    <string name="alert_message_location_required_title">Location service</string>
    <string name="alert_message_location_required_message">Your phone may require the Location service to be enabled in order to scan for Bluetooth® LE devices. If you are sure that there are devices advertising in range and you don\'t see them here, enable it. You may restrict other applications from knowing your location by denying them Location permission in Android Settings.</string>
    <string name="progress_tile_service_discovering">Service Discovery</string>
    <string name="progress_message_service_discovering">Discovering services. Please wait…</string>
    <string name="progress_message_reconnect"> Reconnecting to device. Please wait…</string>
    <string name="pair_on_connect">Initiate pairing after connection</string>
    <string name="wait_for_pairing_request_from_peripheral_seconds">Wait for pairing request\nfrom the peripheral (seconds)</string>
    <string name="device_unknown">Unknown device</string>
    <string name="device_ble_not_supported">Bluetooth® Low Energy not supported on device</string>
    <string name="device_bluetooth_on">Bluetooth® turned on successfully</string>
    <string name="device_bluetooth_not_supported">Bluetooth® not supported on device</string>
    <string name="device_signal_strength">RSSI:</string>
    <string name="device_signal_strength_unit">dBm</string>
    <string name="profile_control_unknown_service">Unknown Service</string>
    <string name="profile_cannot_connect_message">Cannot connect to the device</string>
    <string name="profile_control_stop_notification_toast">Notifications disabled</string>
    <string name="profile_control_stop_indication_toast">Indications disabled</string>
    <string name="profile_control_stop_both_notify_indicate_toast">All indications and notifications disabled</string>
    <string name="enable_notify_failed">Failed to enable notification(s).
        If you see this error repeatedly, disconnect and connect back to the device.</string>
    <string name="co2_parts_ppm">ppm</string>
    <string name="co2_demo_ppm">100</string>
    <string name="yuban_string">AIROC-CO2</string>
    <string name="green_define">1000&lt;</string>
    <string name="orange_define"></string>
    <string name="red_define">&lt;5000</string>
    <string name="yuban_fan_string">AIROC-Ceiling Fan</string>
    <string name="speed_level_grade">grade</string>
    <string name="Speed_demo">0</string>
    <string name="Direction_demo">F</string>
    <string name="Speed_up">&gt;</string>
    <string name="Speed_down">&lt;</string>
    <string name="Stop">stop</string>
    <string name="Invert">invert</string>
    <string name="hrm_data_unit">bpm</string>
    <string name="battery_start_notify">Start Notify</string>
    <string name="battery_read">Read</string>
</resources>