<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/parent_htm"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal|center_vertical"
                        android:layout_weight="9"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/yuban_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/activity_horizontal_margin"
                            android:layout_weight="1.3"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/image_health_temp_measurement_heart"
                            android:scaleType="centerInside"
                            android:src="@drawable/yuban_logo" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:text="@string/yuban_fan_string"
                            android:textColor="@color/main_bg_color"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/Direction"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:ellipsize="marquee"
                        android:gravity="center"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/main_bg_color"
                        android:textSize="@dimen/hrm_measurement_heart_rate_textsize"
                        android:textStyle="bold"
                        android:text="@string/Direction_demo"/>
                    <TextView
                        android:id="@+id/SpeedLevel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:ellipsize="marquee"
                        android:gravity="center"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/main_bg_color"
                        android:textSize="@dimen/hrm_measurement_heart_rate_textsize"
                        android:textStyle="bold"
                        android:text="@string/Speed_demo"/>
                    <TextView
                        android:id="@+id/temperature_unit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:textColor="@color/main_bg_color"
                        android:textSize="@dimen/hrm_measurement_heart_rate_textsize"
                        android:text="@string/speed_level_grade"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="horizontal">
                    </LinearLayout>
                <LinearLayout
                    android:id="@+id/battery_buttons_parent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/Speed_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="05dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_selector"
                        android:text="@string/Speed_up"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_very_small" />

                    <Button
                        android:id="@+id/Speed_down"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="05dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_selector"
                        android:text="@string/Speed_down"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_very_small" />
                    <Button
                        android:id="@+id/Stop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="05dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_selector"
                        android:text="@string/Stop"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_very_small" />
                    <Button
                        android:id="@+id/Invert"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="05dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_selector"
                        android:text="@string/Invert"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_very_small" />
                </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:orientation="horizontal">
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>