<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/parent_htm"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal|center_vertical"
                        android:layout_weight="9"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/yuban_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/activity_horizontal_margin"
                            android:layout_weight="1.3"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/image_health_temp_measurement_heart"
                            android:scaleType="centerInside"
                            android:src="@drawable/yuban_logo" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:autoSizeTextType="uniform"
                            android:gravity="center"
                            android:text="@string/yuban_string"
                            android:textColor="@color/main_bg_color"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/co2_icon"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/image_health_temp_measurement_heart"
                    android:scaleType="centerInside"
                    android:src="@drawable/co2_icon" />

                <LinearLayout
                    android:id="@+id/lin1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        >
                        <ImageView
                            android:id="@+id/green_led"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/round_bg" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:gravity="center"
                            android:textColor="@color/main_bg_color"
                            android:textSize="@dimen/hrm_measurement_heart_rate_textsize"
                            android:textStyle="bold"
                            android:text="@string/green_define"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        >
                        <ImageView
                            android:id="@+id/orange_led"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/orange_led" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:gravity="center"
                            android:textColor="@color/main_bg_color"
                            android:textSize="@dimen/hrm_measurement_heart_rate_textsize"
                            android:textStyle="bold"
                            android:text="@string/orange_define"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        >
                        <ImageView
                            android:id="@+id/red_led"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/red_led" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:gravity="center"
                            android:textColor="@color/main_bg_color"
                            android:textSize="@dimen/hrm_measurement_heart_rate_textsize"
                            android:textStyle="bold"
                            android:text="@string/red_define"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/CO2_value"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        android:ellipsize="marquee"
                        android:gravity="center"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/main_bg_color"
                        android:textSize="@dimen/hrm_measurement_heart_rate_textsize"
                        android:textStyle="bold"
                        android:text="@string/co2_demo_ppm"/>
                    <TextView
                        android:id="@+id/temperature_unit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:textColor="@color/main_bg_color"
                        android:textSize="@dimen/hrm_measurement_heart_rate_textsize"
                        android:text="@string/co2_parts_ppm"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/battery_buttons_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/battery_level_read"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="05dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/battery_read"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_very_small"
            android:visibility="gone" />

        <Button
            android:id="@+id/battery_level_notify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="05dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/battery_start_notify"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_very_small"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>